# chat-with-papers

./: Dockerfile  README.md  justfile  pyproject.toml
src/: app.py  callbacks.py  index_papers.py  paperswithcode.py  prompts.py  rag.py  upstash.py
